# bst_test_task

./: Makefile  pyproject.toml  setup.cfg
R4C/: settings.py  urls.py
api_app/: admin.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
api_app/migrations/: 0001_initial.py  0002_alter_ordersqueue_order.py
fixtures/: customers.json
orders/: models.py
robots/: models.py  models_list.json  validator.py
robots/migrations/: 0002_alter_robot_created_alter_robot_model.py  0002_alter_robot_model.py  0003_alter_robot_created.py  0004_merge_0002_alter_robot_model_0003_alter_robot_created.py
templates/: email_text.html
