[tool.poetry]
name = "r4c"
version = "0.1.0"
description = ""
authors = ["Valerii-Denisov <klerk919191@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
python-dotenv = "^1.0.0"
openpyxl = "^3.1.2"


[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"
coverage = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
